<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back">

    <RelativeLayout
        android:id="@+id/RLTop"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:background="#f44336"
        android:padding="10dp">

        <ImageView
            android:id="@+id/imgTiffin"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:contentDescription="@string/tiffin_icon"
            android:src="@drawable/hostelmatezoneicon" />

        <TextView
            android:id="@+id/tvAddTiffin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:layout_toEndOf="@+id/imgTiffin"
            android:text="@string/hostelmate_zone"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/feedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/RLTop"
        android:layout_margin="15dp"
        android:background="@color/white"
        android:elevation="5dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="8dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etFEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/enter_your_email"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/etFeedback"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etFEmail"
                android:hint="@string/enter_your_feedback"
                android:importantForAutofill="no"
                android:inputType="text"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btn_feedback"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:layout_below="@id/etFeedback"
                android:layout_alignParentEnd="true"
                android:layout_margin="5dp"
                android:backgroundTint="@color/colorBar"
                android:text="@string/send"
                android:textSize="18sp"
                android:textStyle="bold" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/txt_FAQ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/feedback"
        android:layout_marginStart="20dp"
        android:text="@string/faqs"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:id="@+id/FAQ"
        android:layout_width="390dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_FAQ"
        android:layout_margin="15dp"
        android:background="@color/white"
        android:elevation="5dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="8dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/txt_q1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_1_does_this_app_cover_hostels_and_tiffin_centers_located_anywhere_in_bilaspur"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_ans1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_q1"
                android:text="@string/ans_no_the_app_is_restricted_to_a_particular_location_ie_from_seepat_chowk_to_koni"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="normal" />


        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/FAQ2"
        android:layout_width="390dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/FAQ"
        android:layout_margin="15dp"
        android:background="@color/white"
        android:elevation="5dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="8dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/txt_q2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_2_can_we_order_lunch_dinner_through_this_app"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_ans2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_q2"
                android:text="@string/ans_no_you_cannot_order_directly_through_this_app_the_app_only_provides_the_contact_number_and_the_location_of_the_service_incharge"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="normal" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>