<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <ImageView
        android:id="@+id/imgSafety"
        android:layout_width="340dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="1dp"
        android:src="@drawable/saff"
        tools:ignore="ContentDescription" />

    <EditText
        android:id="@+id/etMobileNumber1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgSafety"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="15dp"
        android:hint="@string/emergency_mobile_number1"
        android:inputType="phone"
        android:maxLength="10"
        android:maxLines="1"
        android:padding="6dp"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/etMobileNumber2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etMobileNumber1"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="15dp"
        android:hint="@string/emergency_mobile_number2"
        android:inputType="phone"
        android:maxLength="10"
        android:maxLines="1"
        android:padding="6dp"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/etMobileNumber3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etMobileNumber2"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="15dp"
        android:hint="@string/emergency_mobile_number3"
        android:inputType="phone"
        android:maxLength="10"
        android:maxLines="1"
        android:padding="6dp"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etMobileNumber3"
        android:layout_marginStart="40dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="230dp"
        android:elevation="55dp"
        android:padding="16dp"
        android:shadowRadius="56"
        android:text="@string/save"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:textStyle="bold" />


    <Button
        android:id="@+id/btnCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etMobileNumber3"
        android:layout_marginStart="230dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="40dp"
        android:padding="16dp"
        android:text="@string/cancel"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:textStyle="bold" />

</RelativeLayout>