<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".activity.HostelDetailsActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewHostel"
        android:layout_width="360dp"
        android:layout_height="500dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:background="@color/white"
        android:elevation="5dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="8dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/hostelImg"
                android:layout_width="160dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="80dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/girlhostel"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tvHostelName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/hostelImg"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/mishra_girl_s_hostel"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_below="@id/tvHostelName"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/location" />

            <TextView
                android:id="@+id/tvHostelAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvHostelName"
                android:layout_marginStart="45dp"
                android:layout_marginTop="10dp"
                android:text="@string/kapil_nagar_sarkanda_bilaspur_c_g"
                android:textColor="@color/black"
                android:textSize="18sp" />


            <TextView
                android:id="@+id/tvFee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvHostelAddress"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:text="@string/fee"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvHostelFee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvFee"
                android:layout_centerHorizontal="true"
                android:text="@string/_8377_4000_month"
                android:textColor="@color/green"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvFee"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:padding="10dp"
                android:text="Hostel In Time "
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/tvHostelInTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvTime"
                android:layout_centerHorizontal="true"
                android:text="@string/x23f0_9_00pm"
                android:textColor="@color/red"
                android:textSize="23sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvContact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvTime"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:padding="10dp"
                android:text="@string/contact"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvContact"
                android:layout_centerHorizontal="true"
                android:text="@string/contact"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />


        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/social"
        android:layout_width="360dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        app:cardCornerRadius="10dp"
        app:cardElevation="8dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="0dp"
                android:foregroundGravity="right"
                android:src="@drawable/map"
                tools:ignore="ContentDescription" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>